--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "prod": "NODE_ENV=production webpack -p --config ./webpack/webpack.production.config.js --progress --colors && node ./server/production.js",
     "pm2": "NODE_ENV=production pm2 start ./server/production.js"
   },
+  "engines": {
+    "node": "8.10.0",
+    "npm": "~5.6.0",
+    "yarn": "~0.27.5"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
