--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "0.28.4",
     "css-mqpacker": "6.0.2",
-    "express": "4.15.3",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "3.0.2",
     "isomorphic-style-loader": "4.0.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
