--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "NODE_ENV=development node ./server/development.js",
     "build": "NODE_ENV=production webpack -p --config ./webpack/webpack.production.config.js --progress --colors",
     "prod": "NODE_ENV=production webpack -p --config ./webpack/webpack.production.config.js --progress --colors && node ./server/production.js",
-    "pm2": "NODE_ENV=production pm2 start ./server/production.js"
+    "heroku-postbuild": "npm run prod"
   },
   "engines": {
     "node": "8.10.0",
@@ -53,7 +53,6 @@
     "postcss-scss": "1.0.5",
     "stats-webpack-plugin": "0.6.0",
     "style-loader": "0.21.0",
-    "webpack": "3.11.0",
     "webpack-cleanup-plugin": "0.5.1",
     "webpack-dev-middleware": "2.0.6",
     "webpack-hot-middleware": "2.22.1",
