--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "engines": {
     "node": "8.10.0",
-    "npm": "~5.6.0",
-    "yarn": "~0.27.5"
+    "npm": "5.6.0",
+    "yarn": "0.27.5"
   },
   "author": "",
   "license": "ISC",
@@ -34,7 +34,7 @@
     "clean-webpack-plugin": "0.1.19",
     "css-loader": "0.28.4",
     "css-mqpacker": "6.0.2",
-    "express": "^4.16.3",
+    "express": "4.16.3",
     "extract-text-webpack-plugin": "3.0.2",
     "isomorphic-style-loader": "4.0.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
@@ -50,6 +50,7 @@
     "postcss-scss": "1.0.5",
     "stats-webpack-plugin": "0.6.0",
     "style-loader": "0.21.0",
+    "webpack": "3.11.0",
     "webpack-cleanup-plugin": "0.5.1",
     "webpack-dev-middleware": "2.0.6",
     "webpack-hot-middleware": "2.22.1",
